--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="jumbotron">
-      <button class="btn btn-primary">This is my computer</button>
+      <button class="btn btn-lg btn-primary">This is my computer</button>
     </div>
   </div>
   <div class="col-xs-12">
     <div class="jumbotron">
-      <button class="btn btn-primary">This is someone else's computer</button>
+      <a href="<%= score_path @conn, :index %>" class="btn btn-lg btn-primary">This is someone else's computer</a>
     </div>
   </div>
 </div>
