--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,12 +1,102 @@
-<div class="row">
-  <div class="col-xs-12">
-    <div class="jumbotron">
-      <button class="btn btn-lg btn-primary">This is my computer</button>
-    </div>
-  </div>
-  <div class="col-xs-12">
-    <div class="jumbotron">
-      <a href="<%= score_path @conn, :index %>" class="btn btn-lg btn-primary">This is someone else's computer</a>
-    </div>
-  </div>
+<div class="row find">
+  <div class="col-xs-12 well">
+		<%= form_for @changeset, page_path(@conn, :score), [class: "form form-inline"], fn f -> %>
+      <fieldset>
+        <legend>Not your machine? Enter your name to score against the owner:</legend>
+        <div class="form-group">
+          <%= text_input f, :name, id: "user_search", autocomplete: "off", placeholder: "Your Name" %>
+        </div>
+        <input id="scorer_id" type="hidden" name="scorer_id" />
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary" disabled>Submit</button>
+        </div>
+      </fieldset>
+		<% end %>
+		<script type="text/javascript">
+			var $input = $('#user_search');
+
+			$input.typeahead( {source: function(query, process) {
+				if(query.length < 3) {
+					process([])
+					return
+				}
+
+				$.get('/user/search/' + query, function(data) {
+					process(data)
+				} )
+			}, autoSelect: true} );
+
+			$input.change(function() {
+				var current = $input.typeahead("getActive");
+				if(current && current.name == $input.val()) {
+					$('#scorer_id').val(current.id)
+					$('button[type="submit"]').prop('disabled', false);
+				}
+			});
+		</script>
+	</div>
 </div>
+
+<%= if length(@finds) == 0 && length(@fails) == 0 do %>
+
+<% else %>
+<div class="row">
+	<div class="col-xs-12">
+		<h3 class="text-center"><%= @user.name %>'s Profile</h3>
+	</div>
+<div>
+<div class="row">
+	<div class="col-xs-12">
+		<h3 class="text-center">Recent Finds</h3>
+		<%= if length(@finds) == 0 do %>
+			<h5><%= @user.name %> hasn't found any unlocked computers yet</h5>
+		<% else %>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>When</th>
+					<th>Who</th>
+					<th>Avatar</th>
+				</tr>
+			</thead>
+			<tbody>
+				<%= for find <- @finds do %>
+					<tr>
+						<td><%= time_format(find.when) %></td>
+						<td><%= find.victim.name %></td>
+						<td><img src="<%= find.victim.picture_url %>" width="80" /></td>
+					</tr>
+				<% end %>
+			</tbody>
+		</table>
+		<% end %>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-12">
+		<h3 class="text-center">Recent Fails</h3>
+		<%= if length(@finds) == 0 do %>
+			<h5><%= @user.name %> hasn't left their machine unlocked yet</h5>
+		<% else %>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>When</th>
+						<th>Who</th>
+						<th>Avatar</th>
+					</tr>
+				</thead>
+				<tbody>
+					<%= for fail <- @fails do %>
+						<tr>
+							<td><%= time_format(fail.when) %></td>
+							<td><%= fail.scorer.name %></td>
+							<td><img src="<%= fail.scorer.picture_url %>" width="80" /></td>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
+		<% end %>
+	</div>
+</div>
+<% end %>
