--- a/web/templates/scoreboard/top.html.eex
+++ b/web/templates/scoreboard/top.html.eex
@@ -33,7 +33,7 @@
 			</tbody>
 		</table>
 	</div>
-<div>
+</div>
 <div class="row">
 	<div class="col-xs-12">
 		<h3 class="text-center">Worst Offenders</h3>
@@ -56,4 +56,4 @@
 			</tbody>
 		</table>
 	</div>
-<div>
+</div>
