--- a/web/static/css/app.less
+++ b/web/static/css/app.less
@@ -40,3 +40,15 @@ h1 {
     display: block;
     color: @bad-red;
 }
+
+.unlocked-front form {
+    
+    legend {
+        text-transform: uppercase;
+        text-align: center;
+    }
+
+    .input-group {
+        width: 40%;
+    }
+}
