--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,16 +1,17 @@
 <div class="row find">
-  <div class="col-xs-12 well">
+  <div class="col-xs-12 unlocked-front">
 		<%= form_for @changeset, page_path(@conn, :score), [class: "form form-inline"], fn f -> %>
       <fieldset>
         <legend>Not your machine? Enter your name to score against the owner:</legend>
-        <div class="form-group">
-          <%= text_input f, :name, id: "user_search", autocomplete: "off", placeholder: "Your Name" %>
+        <div class="input-group">
+          <%= text_input f, :name, id: "user_search", class: "form-control", autocomplete: "off", placeholder: "Your Name" %>
         </div>
         <input id="scorer_id" type="hidden" name="scorer_id" />
-        <div class="form-group">
+        <div class="input-group">
           <button type="submit" class="btn btn-primary" disabled>Submit</button>
         </div>
-      </fieldset>
+      </fieldset>			
+		</div>
 		<% end %>
 		<script type="text/javascript">
 			var $input = $('#user_search');
