--- a/web/static/css/app.less
+++ b/web/static/css/app.less
@@ -43,12 +43,16 @@ h1 {
 
 .unlocked-front form {
     
+    div.form-group {
+        width: 100%;
+    }
+
     legend {
         text-transform: uppercase;
         text-align: center;
     }
 
-    .input-group {
-        width: 40%;
+    input[type=text].user-name {
+        width: 100%;
     }
 }
