--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,16 +1,18 @@
 <div class="row find">
   <div class="col-xs-12 unlocked-front">
-		<%= form_for @changeset, page_path(@conn, :score), [class: "form form-inline"], fn f -> %>
-      <fieldset>
-        <legend>Not your machine? Enter your name to score against the owner:</legend>
-        <div class="input-group">
-          <%= text_input f, :name, id: "user_search", class: "form-control", autocomplete: "off", placeholder: "Your Name" %>
+		<%= form_for @changeset, page_path(@conn, :score), [class: "form form-inline form-horizontal"], fn f -> %>
+      <div class="container">
+        <div class="form-group row">
+          <legend>Not your machine? Enter your name to score against the owner:</legend>
+          <div class="col-xs-6 col-xs-offset-2">
+              <%= text_input f, :name, id: "user_search", class: "form-control user-name", autocomplete: "off", placeholder: "Your Name" %>
+            </div>
+            <div class="col-xs-4">
+              <button type="submit" class="btn btn-primary" disabled>Submit</button>
+            </div>
+          <input id="scorer_id" type="hidden" name="scorer_id" />
         </div>
-        <input id="scorer_id" type="hidden" name="scorer_id" />
-        <div class="input-group">
-          <button type="submit" class="btn btn-primary" disabled>Submit</button>
-        </div>
-      </fieldset>			
+      </div>
 		</div>
 		<% end %>
 		<script type="text/javascript">
