--- a/web/templates/scoreboard/recent.html.eex
+++ b/web/templates/scoreboard/recent.html.eex
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-xs-12">
 		<h3 class="text-center">Recent Scores</h3>
-		<table class="table table-striped">
+		<table class="table">
 			<thead>
 				<tr>
 					<th>When</th>
@@ -16,9 +16,9 @@
 					<tr>
 						<td><%= time_format(find.when) %></td>
 						<td><%= find.scorer.name %></td>
-						<td><img src="<%= find.scorer.picture_url %>" width="80" /></td>
+						<td><img src="<%= find.scorer.picture_url %>" width="40" /></td>
 						<td><%= find.victim.name %></td>
-						<td><img src="<%= find.victim.picture_url %>" width="80" /></td>
+						<td><img src="<%= find.victim.picture_url %>" width="40" /></td>
 					</tr>
 				<% end %>
 			</tbody>
