--- a/web/templates/scoreboard/top.html.eex
+++ b/web/templates/scoreboard/top.html.eex
@@ -14,7 +14,7 @@
 <div class="row">
 	<div class="col-xs-12">
 		<h3 class="text-center">Top Finders</h3>
-		<table class="table table-striped">
+		<table class="table">
 			<thead>
 				<tr>
 					<th>Finds</th>
@@ -27,7 +27,7 @@
 					<tr>
 						<td><%= find.count %></td>
 						<td><%= find.scorer.name %></td>
-						<td><img src="<%= find.scorer.picture_url %>" width="80" /></td>
+						<td><img src="<%= find.scorer.picture_url %>" width="40" /></td>
 					</tr>
 				<% end %>
 			</tbody>
@@ -37,7 +37,7 @@
 <div class="row">
 	<div class="col-xs-12">
 		<h3 class="text-center">Worst Offenders</h3>
-		<table class="table table-striped">
+		<table class="table">
 			<thead>
 				<tr>
 					<th>Fails</th>
@@ -50,7 +50,7 @@
 					<tr>
 						<td><%= fail.count %></td>
 						<td><%= fail.victim.name %></td>
-						<td><img src="<%= fail.victim.picture_url %>" width="80" /></td>
+						<td><img src="<%= fail.victim.picture_url %>" width="40" /></td>
 					</tr>
 				<% end %>
 			</tbody>
