--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -40,66 +40,4 @@
 	</div>
 </div>
 
-<%= if length(@finds) == 0 && length(@fails) == 0 do %>
-
-<% else %>
-<div class="row">
-	<div class="col-xs-12">
-		<h3 class="text-center"><%= @user.name %>'s Profile</h3>
-	</div>
-<div>
-<div class="row">
-	<div class="col-xs-12">
-		<h3 class="text-center">Recent Finds</h3>
-		<%= if length(@finds) == 0 do %>
-			<h5><%= @user.name %> hasn't found any unlocked computers yet</h5>
-		<% else %>
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th>When</th>
-					<th>Who</th>
-					<th>Avatar</th>
-				</tr>
-			</thead>
-			<tbody>
-				<%= for find <- @finds do %>
-					<tr>
-						<td><%= time_format(find.when) %></td>
-						<td><%= find.victim.name %></td>
-						<td><img src="<%= find.victim.picture_url %>" width="80" /></td>
-					</tr>
-				<% end %>
-			</tbody>
-		</table>
-		<% end %>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		<h3 class="text-center">Recent Fails</h3>
-		<%= if length(@finds) == 0 do %>
-			<h5><%= @user.name %> hasn't left their machine unlocked yet</h5>
-		<% else %>
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>When</th>
-						<th>Who</th>
-						<th>Avatar</th>
-					</tr>
-				</thead>
-				<tbody>
-					<%= for fail <- @fails do %>
-						<tr>
-							<td><%= time_format(fail.when) %></td>
-							<td><%= fail.scorer.name %></td>
-							<td><img src="<%= fail.scorer.picture_url %>" width="80" /></td>
-						</tr>
-					<% end %>
-				</tbody>
-			</table>
-		<% end %>
-	</div>
-</div>
-<% end %>
+<%= render Unlocked.SharedView, "score-list.html", user: @user, conn: @conn %>
